<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".screens.instruction.InstructionFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="115dp"
            android:layout_height="115dp"
            android:src="@drawable/pngwing_com"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.043" />

        <TextView
            android:id="@+id/instruction"
            style="@style/PrimaryTextStyle"
            android:layout_marginTop="24dp"
            android:text="@string/instruction"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <TextView

            android:id="@+id/textView3"
            style="@style/textStyle"
            android:layout_marginTop="24dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/you_are_now_a_clint_in_our_shop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/instruction" />

        <TextView

            android:id="@+id/textView5"
            style="@style/textStyle"
            android:layout_marginTop="68dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/instruction_information"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/instruction" />

        <TextView
            style="@style/textStyle"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="128dp"
            android:fontFamily="@font/adamina"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/its_time_for_shopping_press_go"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <Button
            android:id="@+id/GoButton"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="472dp"
            android:text="@string/go"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>